--- a/eresto-client/bower.json
+++ b/eresto-client/bower.json
@@ -15,7 +15,7 @@
     "ui-router": "^0.2.13",
     "requirejs": "^2.1.0",
     "angular-bootstrap": "~0.12.1",
-    "angular-momentjs": "~0.1.9"
+    "restangular": "~1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
