--- a/eresto-client/bower.json
+++ b/eresto-client/bower.json
@@ -15,7 +15,8 @@
     "ui-router": "^0.2.13",
     "requirejs": "^2.1.0",
     "angular-bootstrap": "~0.12.1",
-    "restangular": "~1.4.0"
+    "restangular": "~1.4.0",
+    "angular-fontawesome": "~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
